--- a/3M/3M-calcDiff-corr.tex
+++ b/3M/3M-calcDiff-corr.tex
@@ -37,56 +37,56 @@
 \section{La dérivée}
 
 \subsection{Introduction : La tangente à une courbe en un point}
-\insertexo{j2esz}{true}{both}
-\insertexo{uhfwb}{true}{both}
-\insertexo{ivj7s}{true}{both}
-\insertexo{sgsgp}{true}{both}
+\insertexo{j2esz}{false}{both}
+\insertexo{uhfwb}{false}{both}
+\insertexo{ivj7s}{false}{both}
+\insertexo{sgsgp}{false}{both}
 \subsection{Définitions et exemples}
-\insertexo{h2mu9}{true}{both}
-\insertexo{wdzr4}{true}{both}
-\insertexo{9ghy8}{true}{both}
-\insertexo{g75hx}{true}{both}
-\insertexo{v911h}{true}{both}
+\insertexo{h2mu9}{false}{both}
+\insertexo{wdzr4}{false}{both}
+\insertexo{9ghy8}{false}{both}
+\insertexo{g75hx}{false}{both}
+\insertexo{v911h}{false}{both}
 
 
 \subsection{Le nombre dérivé}
-\insertexo{rqd6n}{true}{both}
-\insertexo{pajju}{true}{both}
-\insertexo{mmztw}{true}{both}
-\insertexo{hb4kv}{true}{both}
+\insertexo{rqd6n}{false}{both}
+\insertexo{pajju}{false}{both}
+\insertexo{mmztw}{false}{both}
+\insertexo{hb4kv}{false}{both}
 \subsection{Relation avec la continuité}
-\insertexo{3mumb}{true}{both}
-\insertexo{sjs2h}{true}{both}
-\insertexo{atf6t}{true}{both}
-\insertexo{6ekwp}{true}{both}
+\insertexo{3mumb}{false}{both}
+\insertexo{sjs2h}{false}{both}
+\insertexo{atf6t}{false}{both}
+\insertexo{6ekwp}{false}{both}
 
 \subsection{Règles de dérivation}
-\insertexo{5mcny}{true}{both}
-\insertexo{5fsdv}{true}{both}
-\insertexo{raguk}{true}{both}
-\insertexo{uc9rv}{true}{both}
-\insertexo{auu1q}{true}{both}
-\insertexo[exo:derQuot]{972y4}{true}{both}
-\insertexo{bgaa8}{true}{both}
-\insertexo{4pfpm}{true}{both}
-\insertexo{b6sz1}{true}{both}
-\insertexo{hrm6y}{true}{both}
-\insertexo{4pmjf}{true}{both}
-\begin{comment}
+\insertexo{5mcny}{false}{both}
+\insertexo{5fsdv}{false}{both}
+\insertexo{raguk}{false}{both}
+\insertexo{uc9rv}{false}{both}
+\insertexo{auu1q}{false}{both}
+\insertexo[exo:derQuot]{972y4}{false}{both}
+\insertexo{bgaa8}{false}{both}
+\insertexo{4pfpm}{false}{both}
+\insertexo{b6sz1}{false}{both}
+\insertexo{hrm6y}{false}{both}
+\insertexo{4pmjf}{false}{both}
 \subsection{L'équation de la tangente}
-\insertexo{pbjwq}{true}{both}
-\insertexo{t8c3v}{true}{both}
-\insertexo{r2h6k}{true}{both}
-\insertexo{p5qw8}{true}{both}
-\insertexo{n9xt4}{true}{both}
-\insertexo{f3jrh}{true}{both}
-\insertexo{q4xfv}{true}{both}
-\insertexo{xk5f9}{true}{both}
-\insertexo{f9twd}{true}{both}
-\insertexo{ddnv1}{true}{both}
+\insertexo{pbjwq}{false}{both}
+\insertexo{t8c3v}{false}{both}
+\insertexo{r2h6k}{false}{both}
+\insertexo{p5qw8}{false}{both}
+\insertexo{n9xt4}{false}{both}
+\insertexo{f3jrh}{false}{both}
+\insertexo{q4xfv}{false}{both}
+\insertexo{xk5f9}{false}{both}
+\insertexo{f9twd}{false}{both}
+\insertexo{ddnv1}{false}{both}
+\begin{comment}
 \subsection{Dérivées des fonctions trigonométriques}
-\insertexo{pju6j}{true}{both}
-\insertexo{areny}{true}{both}
-\insertexo{u68mh}{true}{both}
+\insertexo{pju6j}{false}{both}
+\insertexo{areny}{false}{both}
+\insertexo{u68mh}{false}{both}
 \end{comment} 
 \end{document}
