--- a/src_exos/f3jrh.tex
+++ b/src_exos/f3jrh.tex
@@ -19,7 +19,7 @@ Donner l'équation de la tangente au graphe de $f$ au point d'abscisse $a$.
 }
 \correction{
 \tcblower
-\begin{tasks}
+\begin{tasks}(3)
 \task 	$y=4x-3$
 \task $y=\dfrac{4}{5}x+\dfrac{9}{5}$
 \task $y=\dfrac{7}{9}x-\dfrac{1}{3}$
