--- a/src_exos/n9xt4.tex
+++ b/src_exos/n9xt4.tex
@@ -24,7 +24,7 @@ On a $f(x)=\sqrt{x}=x^{\frac{1}{2}}$, donc $f'(x)=\dfrac{1}{2}x^{-\frac{1}{2}}=\
 
 L'équation de la tangente est :
 \[
-y=\dfrac{1}{4}(x-4)+2=\dfrac{1}{4}x-1+2=\dfrac{1}{4}x+1
+y=\dfrac{1}{4}(x-4)+2\iff y=\dfrac{1}{4}x-1+2\iff y=\dfrac{1}{4}x+1
 \]
 
 \textbf{Pour $x=1$ :}
@@ -35,7 +35,7 @@ y=\dfrac{1}{4}(x-4)+2=\dfrac{1}{4}x-1+2=\dfrac{1}{4}x+1
 
 L'équation de la tangente est :
 \[
-y=\dfrac{1}{2}(x-1)+1=\dfrac{1}{2}x-\dfrac{1}{2}+1=\dfrac{1}{2}x+\dfrac{1}{2}
+y=\dfrac{1}{2}(x-1)+1\iff y=\dfrac{1}{2}x-\dfrac{1}{2}+1\iff y=\dfrac{1}{2}x+\dfrac{1}{2}
 \]
 }
 
