--- a/src_exos/p5qw8.tex
+++ b/src_exos/p5qw8.tex
@@ -23,16 +23,16 @@ Soit la fonction $f(x)=x^2$.
 
 Pour $x=2$, on a $f'(2)=2\cdot 2=4$.
 
-L'équation de la tangente au point $(2,4)$ est :
+L'équation de la tangente au point $(2;4)$ est :
 \[
-y=f'(2)(x-2)+f(2)=4(x-2)+4=4x-8+4=4x-4
+y=f'(2)(x-2)+f(2)\iff y=4(x-2)+4 \iff y=4x-4
 \]
 
 \task La tangente au point d'abscisse $2$ a pour équation $y=4x-4$ (d'après la question précédente).
 
 La droite d'équation $y=4x-3$ n'est donc \textbf{pas} tangente au graphe de $f$ au point d'abscisse $2$, car les équations sont différentes.
 
-On peut aussi vérifier que le point $(2,3)$ n'appartient pas au graphe de $f$, car $f(2)=4\neq 3$.
+On peut aussi vérifier que le point $(2;3)$ n'appartient pas au graphe de $f$, car $f(2)=4\neq 3$.
 \end{tasks}
 }
 
