--- a/src_exos/r2h6k.tex
+++ b/src_exos/r2h6k.tex
@@ -26,28 +26,28 @@ On a $f(x)=\dfrac{1}{x^2}=x^{-2}$, donc $f'(x)=-2x^{-3}=-\dfrac{2}{x^3}$.
 
 L'équation de la tangente est :
 \[
-y=-\dfrac{1}{4}(x-2)+\dfrac{1}{4}=-\dfrac{1}{4}x+\dfrac{1}{2}+\dfrac{1}{4}=-\dfrac{1}{4}x+\dfrac{3}{4}
+y=-\dfrac{1}{4}(x-2)+\dfrac{1}{4}\iff y=-\dfrac{1}{4}x+\dfrac{3}{4}
 \]
 
 \task On cherche $a$ tel que $f'(a)=\dfrac{1}{4}$.
-
+Pour $a\neq 0$~:
 \[
--\dfrac{2}{a^3}=\dfrac{1}{4} \quad\Rightarrow\quad a^3=-8 \quad\Rightarrow\quad a=-2
+-\dfrac{2}{a^3}=\dfrac{1}{4} \quad\implies \quad a^3=-8 \quad\Rightarrow\quad a=-2
 \]
 
-Le point de tangence est $\left(-2,\dfrac{1}{4}\right)$.
+Le point de tangence est $\left(-2;\dfrac{1}{4}\right)$.
 
 \task Soit $a$ l'abscisse du point de tangence. L'équation de la tangente en ce point est :
 \[
-y=f'(a)(x-a)+f(a)=-\dfrac{2}{a^3}(x-a)+\dfrac{1}{a^2}
+y=-\dfrac{2}{a^3}(x-a)+\dfrac{1}{a^2}
 \]
 
-Cette tangente passe par $\left(\dfrac{1}{2},2\right)$, donc :
+Cette tangente passe par $\left(\dfrac{1}{2};2\right)$, donc :
 \[
-2=-\dfrac{2}{a^3}\left(\dfrac{1}{2}-a\right)+\dfrac{1}{a^2}=-\dfrac{1}{a^3}+\dfrac{2}{a^2}+\dfrac{1}{a^2}=-\dfrac{1}{a^3}+\dfrac{3}{a^2}
+2=-\dfrac{2}{a^3}\left(\dfrac{1}{2}-a\right)+\dfrac{1}{a^2}\iff 2=-\dfrac{1}{a^3}+\dfrac{3}{a^2}
 \]
 
-En multipliant par $a^3$ :
+En multipliant par $a^3$ $(a\neq0)$:
 \[
 2a^3=-1+3a \quad\Rightarrow\quad 2a^3-3a+1=0
 \]
@@ -56,7 +56,7 @@ Par factorisation : $(a-1)(2a^2+2a-1)=0$.
 
 Donc $a=1$ ou $a=\dfrac{-2\pm\sqrt{4+8}}{4}=\dfrac{-2\pm 2\sqrt{3}}{4}=\dfrac{-1\pm\sqrt{3}}{2}$.
 
-Les points de tangence sont : $\left(1,1\right)$, $\left(\dfrac{-1+\sqrt{3}}{2},\dfrac{4}{4-2\sqrt{3}}\right)$ et $\left(\dfrac{-1-\sqrt{3}}{2},\dfrac{4}{4+2\sqrt{3}}\right)$.
+Les points de tangence sont : $\left(1,1\right)$, $\left(\dfrac{-1+\sqrt{3}}{2};\dfrac{4}{4-2\sqrt{3}}\right)$ et $\left(\dfrac{-1-\sqrt{3}}{2};\dfrac{4}{4+2\sqrt{3}}\right)$.
 \end{tasks}
 }
 
