--- a/1M/1M-exercicesS1-corr.tex
+++ b/1M/1M-exercicesS1-corr.tex
@@ -204,14 +204,14 @@ sorting=none]{biblatex}  % Load biblatex for bibliography handling
 \insertexo{bdr9}{false}{both}
 \insertexo{q43t}{false}{both}
 \insertexo{qad4}{false}{both}
-%\subsection{Résolution de problèmes}
-%\insertexo{591f}{false}{both}
-%\insertexo{a24q}{false}{both}
-%\insertexo{dv8m}{false}{both}
-%\insertexo{v3z1}{false}{both}
-%\insertexo{wy6v}{false}{both}
-%\insertexo{6vjf}{false}{both}
-%\insertexo{936c}{false}{both}
+\subsection{Résolution de problèmes}
+\insertexo{591f}{false}{both}
+\insertexo{a24q}{false}{both}
+\insertexo{dv8m}{false}{both}
+\insertexo{v3z1}{false}{both}
+\insertexo{wy6v}{false}{both}
+\insertexo{6vjf}{false}{both}
+\insertexo{936c}{false}{both}
 %\section{Pythagore}
 %\insertexo{4hnue}{false}{both}
 %\insertexo{xsa6d}{false}{both}
