--- a/src_exos/5hev4.tex
+++ b/src_exos/5hev4.tex
@@ -13,7 +13,7 @@
 Trouver la ou les valeurs prévues par le
 théorème des accroissements finis pour la
 fonction $f(x) = x^2 - x$ sur
-l'intervalle $[-3,4]$
+l'intervalle $[-3;4]$
 }
 \correction{
 \tcblower
