--- a/src_exos/bw6xm.tex
+++ b/src_exos/bw6xm.tex
@@ -14,7 +14,7 @@ Soit \(P\) un polynôme non constant
 \[
 P(x) = a_n x^n + \cdots + a_1 x + a_0.
 \]
-Montrer que, entre deux racines consécutives de l’équation \(P(x) = 0\), il existe au plus une racine de l’équation \(P'(x) = 0\).
+Montrer que, entre deux racines consécutives de l’équation \(P(x) = 0\), il existe au moins une racine de l’équation \(P'(x) = 0\).
 }
 \correction{
 \tcblower
