--- a/src_exos/kafhh.tex
+++ b/src_exos/kafhh.tex
@@ -10,7 +10,7 @@
 
 \contenu{
 \tcblower
-Déterminer si la fonction \(f(x) = (1 - x^2)^{1/3} + x^2\) satisfait les conditions du théorème de Rolle sur l'intervalle \([-1,1]\). Si oui, trouver les valeurs de $c$ prédites par le théorème.
+Déterminer si la fonction \(f(x) = (1 - x^2)^{1/3} + x^2\) satisfait les conditions du théorème de Rolle sur l'intervalle \([-1;1]\). Si oui, trouver les valeurs de $c$ prédites par le théorème.
 }
 \correction{
 \tcblower
