--- a/3M/3M-calcDiffSuite.tex
+++ b/3M/3M-calcDiffSuite.tex
@@ -24,7 +24,7 @@
 % Reduce indentation for section entries
 \setlength{\cftsecindent}{1em}
 \begin{center}
-{\bfseries \Huge Chapitre 2~: \\Calcul différentiel -- Partie 1}
+{\bfseries \Huge Chapitre 2~: \\Calcul différentiel -- Partie 2}
 \vspace{1cm}
 
 \begin{tikzpicture}
@@ -35,112 +35,960 @@
 \tableofcontents
 
 \newpage
+\newpage
+\section{Le théorème des accroissement finis et ses applications}
 
-\subsection{Concavité et points d'inflexion}
-\subsection{Application à l'étude de fonctions}
+\subsection{Le théorème des accroissement finis}
 
-\subsection{Applications}
+\begin{prop}[label=prop:max]
+	(avec démonstration)
+    \begin{tikzpicture}[scale=0.6]
+        \begin{axis}[
+    axis lines=middle,
+    xlabel={$x$}, ylabel={$y$},
+    label style={font=\normalsize},
+    every axis x label/.style={at={(ticklabel* cs:0.92)}, anchor=west, yshift=10pt},
+    every axis y label/.style={at={(ticklabel* cs:0.92)}, anchor=south, xshift=10pt},
+            xtick=\empty,
+            ytick=\empty,
+            xmin=-1, xmax=3,
+            ymin=-0.5, ymax=5,
+            enlarge y limits={upper=0.1},
+            clip=false,
+            axis line style={-Stealth},
+        ]
+        % The function curve (smooth)
+        \addplot[
+            thick,
+            red!80!black,
+            smooth,
+            tension=0.8
+        ] coordinates {
+            (-0.5, 1.5)
+            (0.8, 4)    % Local Maximum
+            (2, 2.2)    % Local Minimum
+            (3.5, 3.5)  % Local Maximum
+        };
 
+        % --- Arrow Annotations ---
+        \coordinate (max1) at (axis cs:0.8, 4);
+        \coordinate (min1) at (axis cs:2, 2.2);
+
+        \node[align=center, font=\footnotesize] (label_min) at (axis cs:3, 1) {minimum};
+        \node[align=center, font=\footnotesize] (label_max) at (axis cs:2.5, 4.5) {maximum};
+
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max) to[bend right=10] (max1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min) to[bend right=5] (min1);
+
+        \end{axis}
+    \end{tikzpicture}
+	\tcblower
+	Soit $f$ une fonction dérivable sur un intervalle $\ointerval{a}{b}$.
+
+    Soit $c\in \ointerval{a}{b}$ tel que $f(c)$ soit un maximum de $f$ sur
+    l'intervalle $\ointerval{a}{b}$.
+
+    Alors, $f'(c)=0$.
+
+    \medskip
+
+	\begin{proof}
+	L'image de $c$ est un maximum, donc pour un $h$ assez petit, on a
+	\[f(c)\geq f(x),  \forall x\in \ointerval{c-h}{c+h}.\]
+	Ce qui est équivalent à
+	\begin{equation}
+	f(c)-f(x)\geq 0,  \forall x\in \ointerval{c-h}{c+h}.
+	\tag{$\star$}
+	\label{eq:max}
+\end{equation}
+	Puisque $f$ est dérivable sur $\ointerval{a}{b}$, on a que
+	\[f'(c)=\lim_{h\to 0^+}\dfrac{f(c+h)-f(c)}{h}=\lim_{h\to 0^-}\dfrac{f(c+h)-f(c)}{h}.\]
+
+	Calculons le signe de ces deux limites.
+	\begin{align*}
+		\text{signe}\left(\lim_{h\to 0^+}\dfrac{f(c+h)-f(c)}{h}\right)&=\dfrac{\text{signe}\left(\displaystyle{\lim_{h\to 0^+}}f(c+h)-f(c)\right)}{\text{signe}\left(\displaystyle{\lim_{h\to 0^+}}h\right)}\\
+		&=\dfrac{«-»}{«+»}=«-»
+\end{align*}
+
+	\begin{align*}
+		\text{signe}\left(\lim_{h\to 0^-}\dfrac{f(c+h)-f(c)}{h}\right)&=\dfrac{\text{signe}\left(\displaystyle{\lim_{h\to 0^-}}f(c+h)-f(c)\right)}{\text{signe}\left(\displaystyle{\lim_{h\to 0^-}}h\right)}\\
+		&=\dfrac{«-»}{«-»}=«+»
+\end{align*}
+Où le signe du numérateur est positif par \eqref{eq:max}.
+	Le seul nombre qui est à la fois positif et négatif est $0$, donc $f'(c)=0$.
+	\end{proof}
+\end{prop}
+\begin{remarque}
+	\tcblower
+Un résultat identique est valable pour un minimum (si $f(c)$ est un minimum).
+\end{remarque}
+
+\begin{thm}
+	Thm de Rolle
+
+	(avec démonstration)
+	\tcblower
+	Soit $f$ une fonction dérivable sur $] a;b[$ et continue sur $[a;b]$.
+
+	Si $f(a)~=~f(b)~=~0$, alors il existe (au moins un) $c\in] a;b[$ tel que
+	\[f'(c)=0.\]
+	\begin{proof}
+
+		Si $f$ est constante alors cela est évident.
+
+		Autrement, on peut supposer qu'il existe $x\in \interval{a}{b}$ tel que
+        $f(x)>0$ ou $f(x)<0$. On traite le cas $f(x)>0$ (le cas $f(x)<0$ est similaire).
+
+La fonction $f$ est continue sur un fermé, donc par la théorème de la valeur intermédiaire, il existe $c\in \interval{a}{b}$ tel que $f(c)$ est un maximum de $f$ sur $\interval{a}{b}$.
+
+Dans notre cas, $c\neq a,b$ et donc $f(c)$ est un maximum de $f$ sur $\ointerval{a}{b}$ (pourquoi est-ce que $c\neq a,b$?).
+
+Par la proposition \ref{prop:max}, $f'(c)=0$.
+	\end{proof}
+\end{thm}
+\begin{center}
+\begin{tikzpicture}
+    % Define the colors
+    \colorlet{curveBlue}{blue!70!black}
+    \colorlet{tangentRed}{red!80!black}
+
+    \begin{axis}[
+        axis lines=middle,
+        xlabel={$x$},
+        ylabel={$y$},
+    every axis x label/.style={at={(ticklabel* cs:0.92)}, anchor=west, yshift=10pt},
+    every axis y label/.style={at={(ticklabel* cs:0.92)}, anchor=south, xshift=10pt},
+        % x-ticks for endpoints and critical points
+        xtick={2, 2.8453, 5.1547, 6},
+        xticklabels={$a$, $c_0$, $c_1$, $b$},
+        % y-ticks: highlighting the equal height of f(a) and f(b)
+        ytick={1.4604, 3, 4.5396},
+        yticklabels={$f(c_1)$, $f(a)=f(b)$, $f(c_0)$},
+        xmin=0, xmax=7.5,
+        ymin=0, ymax=6,
+        axis line style={-{Stealth[length=2.5mm]}, line width=1pt},
+        width=12cm,
+        height=9cm,
+        clip=false,
+    ]
+
+    % Function: f(x) = 0.5(x-4)^3 - 2(x-4) + 3
+    % This is chosen so f(2) = f(6) = 3
+    \addplot[
+        line width=1.8pt,
+        curveBlue,
+        domain=2:6,
+        samples=200,
+        smooth
+    ] {0.5*(x-4)^3 - 2*(x-4) + 3};
+
+
+    % Horizontal Tangent at c0 (2.8453)
+    \addplot[
+        line width=1.5pt,
+        tangentRed,
+        domain=1.8:4
+    ] {4.5396};
+
+    % Horizontal Tangent at c1 (5.1547)
+    \addplot[
+        line width=1.5pt,
+        tangentRed,
+        domain=4:6.2
+    ] {1.4604};
+
+    % Vertical dotted lines to x-axis
+    \draw[dotted, thick] (axis cs:2, 0) -- (axis cs:2, 3);
+    \draw[dotted, thick] (axis cs:6, 0) -- (axis cs:6, 3);
+    \draw[dashed, gray] (axis cs:2.8453, 0) -- (axis cs:2.8453, 4.5396);
+    \draw[dashed, gray] (axis cs:5.1547, 0) -- (axis cs:5.1547, 1.4604);
+
+    % Horizontal dotted lines to y-axis
+    \draw[dotted, thick] (axis cs:0, 3) -- (axis cs:2, 3);
+    \draw[dashed, gray] (axis cs:0, 4.5396) -- (axis cs:2.8453, 4.5396);
+    \draw[dashed, gray] (axis cs:0, 1.4604) -- (axis cs:5.1547, 1.4604);
+
+    % Points
+    \fill[curveBlue] (axis cs:2, 3) circle (2.5pt);
+    \fill[curveBlue] (axis cs:6, 3) circle (2.5pt);
+    \fill[tangentRed] (axis cs:2.8453, 4.5396) circle (2.5pt);
+    \fill[tangentRed] (axis cs:5.1547, 1.4604) circle (2.5pt);
+
+    \end{axis}
+\end{tikzpicture}
+\end{center}
+
+\begin{thm}
+	Thm des accroissements finis
+
+	(avec démonstration)
+	\tcblower
+	Soit $f$ une fonction dérivable sur $] a;b[$ et continue sur $[a;b]$, alors il existe (au moins un) $c\in ]a;b[$ tel que
+	\[f'(c)=\dfrac{f(b)-f(a)}{b-a}.\]
+
+	\begin{proof}
+		On définit la fonction affine $s:\interval{a}{b}\longrightarrow \mathbb{R}$
+		\[s(x)=f(a)+\dfrac{f(b)-f(a)}{b-a}(x-a)\]
+
+		Notons que $s(a)=f(a)$ et $s(b)=f(b)$ et que
+        $s'(x)=\dfrac{f(b)-f(a)}{b-a}$ est constante.
+
+	On considère la fonction
+
+	\[d(x)=f(x)-s(x).\]
+
+	On a que $d$ est continue sur $\interval{a}{b}$, car $f$ et $s$ le sont (différence de fonctions continues). De la même manière, elle est dérivable sur $\ointerval{a}{b}$.
+
+	Par ailleurs,
+	\begin{align*}
+		d(a)&=f(a)-s(a)=f(a)-f(a)=0\\
+		d(b)&=f(b)-s(b)=f(b)-f(b)=0
+	\end{align*}
+
+	La fonction $d$ satisfait toutes les hypothèses du Théorème de Rolle. Ainsi, il existe $c\in \ointerval{a}{b}$ tel que $d'(c)=0$. On obtient
+
+	$\begin{aligned}d'(c)=0 &\iff f'(c)-s'(c)=0\iff f'(c)=s'(c)\\
+	&\iff f'(c)=\dfrac{f(b)-f(a)}{b-a}.
+	\end{aligned}$
+
+	\end{proof}
+\end{thm}
+\begin{center}
+\begin{tikzpicture}[scale=1.35]
+    % Define the colors
+    \colorlet{curveBlue}{blue!70!black}
+    \colorlet{lineGray}{gray!60}
+    \colorlet{tangentRed}{red!80!black}
+
+    \begin{axis}[
+        axis lines=middle,
+        xlabel={$x$},
+        ylabel={$y$},
+    every axis x label/.style={at={(ticklabel* cs:0.92)}, anchor=west, yshift=10pt},
+    every axis y label/.style={at={(ticklabel* cs:0.92)}, anchor=south, xshift=10pt},
+        % Distinct x-ticks
+        xtick={2, 2.8453, 5.1547, 6},
+        xticklabels={$a$, $c_0$, $c_{1}$, $b$},
+        % Distinct y-ticks: f(a)=1, f(x1)=2.615, f(x0)=3.385, f(b)=5
+        ytick={1, 2.6151, 3.3849, 5},
+        yticklabels={$f(a)$, $f(c_1)$, $f(c_0)$, $f(b)$},
+        xmin=0, xmax=7.5,
+        ymin=0, ymax=6.5,
+        axis line style={-{Stealth[length=2.5mm]}, line width=1pt},
+        width=12cm,
+        height=9cm,
+        clip=false,
+    ]
+
+    % New Function: f(x) = 0.5(x-4)^3 - (x-4) + 3
+    % This ensures f(a) and f(b) are far from the local extrema
+    \addplot[
+        line width=1.8pt,
+        curveBlue,
+        domain=1.8:6.1,
+        samples=200,
+        smooth
+    ] {0.5*(x-4)^3 - (x-4) + 3};
+
+    % Secant line: y = x - 1
+    \addplot[
+        line width=1.2pt,
+        black,
+        domain=1.5:6.5
+    ] {x - 1};
+
+
+    % Tangent at x0 (2.8453)
+    \addplot[
+        line width=1.5pt,
+        tangentRed,
+        domain=1.8:4
+    ] {x + 0.5396};
+
+    % Tangent at x1 (5.1547)
+    \addplot[
+        line width=1.5pt,
+        tangentRed,
+        domain=4:6.2
+    ] {x - 2.5396};
+
+    % Vertical dotted lines to x-axis
+    \draw[dotted, thick] (axis cs:2, 0) -- (axis cs:2, 1);
+    \draw[dotted, thick] (axis cs:6, 0) -- (axis cs:6, 5);
+    \draw[dashed, gray] (axis cs:2.8453, 0) -- (axis cs:2.8453, 3.3849);
+    \draw[dashed, gray] (axis cs:5.1547, 0) -- (axis cs:5.1547, 2.6151);
+
+    % Horizontal dotted lines to y-axis
+    \draw[dotted, thick] (axis cs:0, 1) -- (axis cs:2, 1);
+    \draw[dotted, thick] (axis cs:0, 5) -- (axis cs:6, 5);
+    \draw[dashed, gray] (axis cs:0, 3.3849) -- (axis cs:2.8453, 3.3849);
+    \draw[dashed, gray] (axis cs:0, 2.6151) -- (axis cs:5.1547, 2.6151);
+
+    % Points
+    \fill[curveBlue] (axis cs:2, 1) circle (2.5pt);
+    \fill[curveBlue] (axis cs:6, 5) circle (2.5pt);
+    \fill[tangentRed] (axis cs:2.8453, 3.3849) circle (2.5pt);
+    \fill[tangentRed] (axis cs:5.1547, 2.6151) circle (2.5pt);
+
+    \end{axis}
+\end{tikzpicture}
+\end{center}
+  \newpage
+\subsection{Fonctions croissantes et décroissantes}
+Maintenant que l'on a une bonne idée de ce que représente la dérivée, on comprend intuitivement que
+\begin{tasks}
+\task une fonction est « croissante » sur un intervalle sur lequel sa dérivée est positive;
+\task une fonction est « décroissante » sur un intervalle sur lequel sa dérivée est négative ;
+\task une fonction est constante sur un intervalle sur lequel sa dérivée est nulle.
+\end{tasks}
+Mais que veut dire « croissante » et « décroissante » mathématiquement ?
+\begin{definition}
+	\tcblower
+	On dit qu'une fonction est
+	\begin{itemize}
+		\item {\bfseries croissante} sur un intervalle $I$ ssi pour tout $x_1, x_2\in I$
+			\[x_1<x_2\implies f(x_1)<f(x_2)\]
+
+		\item {\bfseries décroissante} sur un intervalle $I$ ssi pour tout $x_1, x_2\in I$
+			\[x_1<x_2\implies f(x_1)>f(x_2)\]
+	\end{itemize}
+\end{definition}
+\begin{exemple}
+	\tcblower
+La fonction $f(x)=x^2$ est décroissante sur l'intervalle $]-\infty;0]$ et croissante sur l'intervalle $[0;+\infty[$.
+\end{exemple}
+\begin{exemple}
+	\tcblower
+	La fonction \[f(x)=\begin{cases}
+		1,&x<0\\
+		x,&x\geq 0,
+	\end{cases}\]
+	est constante sur l'intervalle $]-\infty;0]$ et croissante sur l'intervalle $[0;+\infty[$.
+\end{exemple}
+
+Le théorème suivant est une conséquence directe du Théorème des accroissements finis.
+
+\begin{thm}
+	Relation entre la dérivée et la monotonie d'une fonction
+
+	(avec démonstration)
+	\tcblower
+	Soit $f$ une fonction dérivable sur un intervalle $I=]a;b[$, alors
+	\begin{itemize}
+		\item Si $f'(x)>0$ pour tout $x\in I$, alors $f$ est strictement croissante sur $I$;
+		\item Si $f'(x)<0$ pour tout $x\in I$, alors $f$ est strictement décroissante sur $I$;
+		\item Si $f'(x)=0$ pour tout $x\in I$, alors $f$ est constante sur $I$.
+	\end{itemize}
+	\begin{proof}
+		Soit $x_1,x_2\in \ointerval{a}{b}$ avec $x_1<x_2$. Par le théorème des accroissement finis, il existe $c\in\ointerval{x_1}{x_2}$ tel que
+		\[f'(c)=\dfrac{f(x_2)-f(x_1)}{x_2-x_1}\]
+		d'où
+		\[f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1)\]
+		On note que $(x_2-x_1)$ est toujours positif (pourquoi~?).
+		\begin{itemize}
+			\item Dans l'hypothèse d'une dérivée srictement positive sur $I$,
+
+				on a $0<f'(c)$, alors
+				\[0<f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1),\]
+				donc $0<f(x_2)-f(x_1) \iff f(x_1)<f(x_2)$. On a choisi $x_1<x_2$ quelconques, donc $f$ est strictement croissante sur $I$.
+			\item Dans l'hypothèse d'une dérivée srictement négative sur $I$,
+
+				on a $0>f'(c)$, alors
+				\[0>f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1),\]
+				donc $0>f(x_2)-f(x_1) \iff f(x_1)>f(x_2)$. On a choisi $x_1<x_2$ quelconques, donc $f$ est strictement décroissante sur $I$.
+			\item Dans l'hypothèse d'une dérivée nulle sur $I$, on a $f'(c)=0$, alors
+				\[0=f'(c)\cdot (x_2-x_1)=f(x_2)-f(x_1),\]
+				donc $f(x_2)-f(x_1)=0 \iff f(x_2)=f(x_1)$. On a choisi $x_1<x_2$ quelconques, donc $f$ est constante sur $I$.
+		\end{itemize}
+
+	\end{proof}
+\end{thm}
+
+\begin{remarque}
+  \tcblower
+  Afin d'étudier la monotonie d'une fonction, on étudie le signe de sa dérivée.
+\end{remarque}
+\newpage
+\subsection{Maximum et minimum}
+
+Nous généralisons à présent un sujet que vous avez déjà survolé les années
+précédentes : la recherche d'un maximum ou d'un minimum d'une fonction.
+
+Que pouvez-vous dire à ce sujet pour les fonctions affines ou quadratiques~?
+
+
+\begin{definition}
+	\tcblower
+	Une fonction admet un maximum local en $c$ ssi
+	\[f(c)\geq f(x) \text{ pour tout } x \text{ assez proche de } c.\]
+
+Une fonction admet un minimum local en $c$ ssi
+	\[f(c)\leq f(x) \text{ pour tout } x \text{ assez proche de } c.\]
+\end{definition}
+
+\begin{figure}[h!]
+\centering
+\caption{Illustration de la notion de maximum et minimum local sur un ouvert}
+\label{fig:combined_extrema}
+
+% --- SUBFIGURE 1: Differentiable Function ---
+\begin{subfigure}[b]{0.48\textwidth}
+    \centering
+    \begin{tikzpicture}
+        \begin{axis}[
+            axis lines=middle,
+            xlabel=$x$,
+            ylabel=$y$,
+            xtick=\empty,
+            ytick=\empty,
+            xmin=-1, xmax=6,
+            ymin=-0.5, ymax=5,
+            enlarge y limits={upper=0.1},
+            clip=false,
+            axis line style={-Stealth},
+        ]
+        % The function curve (smooth)
+        \addplot[
+            thick,
+            red!80!black,
+            smooth,
+            tension=0.8
+        ] coordinates {
+            (-0.5, 1.5)
+            (0.8, 4)    % Local Maximum
+            (2, 2.2)    % Local Minimum
+            (3.5, 3.5)  % Local Maximum
+            (4.7, 1.5)  % Local Minimum
+            (5.8, 4.5)
+        };
+
+
+        % --- Arrow Annotations ---
+        \coordinate (max1) at (axis cs:0.8, 4);
+        \coordinate (min1) at (axis cs:2, 2.2);
+        \coordinate (max2) at (axis cs:3.5, 3.5);
+        \coordinate (min2) at (axis cs:4.7, 1.5);
+
+        \node[align=center, font=\footnotesize] (label_min) at (axis cs:3, 1) {minimum\\ local};
+        \node[align=center, font=\footnotesize] (label_max) at (axis cs:2.5, 4.5) {maximum\\ local};
+
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max) to[bend right=10] (max1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min) to[bend left=5] (min1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max) to[bend left=10] (max2);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min) to[bend right=20] (min2);
+
+        \end{axis}
+    \end{tikzpicture}
+\end{subfigure}
+\hfill % Adds horizontal space between the figures
+% --- SUBFIGURE 2: Non-differentiable Function ---
+\begin{subfigure}[b]{0.48\textwidth}
+    \centering
+    \begin{tikzpicture}
+         \begin{axis}[
+            axis lines=middle,
+            xlabel=$x$,
+            ylabel=$y$,
+            xtick=\empty,
+            ytick=\empty,
+            xmin=-1, xmax=6,
+            ymin=-0.5, ymax=5,
+            enlarge y limits={upper=0.1},
+            clip=false,
+            axis line style={-Stealth},
+        ]
+        % The function curve (piecewise linear)
+        \addplot[
+            thick,
+            red!80!black
+        ] coordinates {
+            (0, 4)
+            (2, 1)   % Local Minimum (cusp)
+            (3.5, 4) % Local Maximum (cusp)
+            (5.5, 2)
+        };
+
+        % --- Arrow Annotations ---
+        \coordinate (min1) at (axis cs:2, 1);
+        \coordinate (max1) at (axis cs:3.5, 4);
+
+        \node[align=center, font=\footnotesize] (label_min1) at (axis cs:3.5, 1.2) {minimum\\ local};
+        \node[align=center, font=\footnotesize] (label_max1) at (axis cs:2, 4.5) {maximum\\ local};
+
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min1) to[bend left=10] (min1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max1) to[bend left=5] (max1);
+
+        \end{axis}
+    \end{tikzpicture}
+\end{subfigure}
+
+\end{figure}
+\begin{thm}
+	\tcblower
+	Si $f$ a un maximum ou un minimum local en $c$, alors
+	\[f'(c)=0 \text{ ou } f'(c) \text{ n'existe pas.}\]
+\end{thm}
+
+\begin{definition}
+	\tcblower
+	Un point $c$ de l'ensemble de définition de la fonction $f$ est appelé un point critique de $f$ ssi
+	\[f'(c)=0 \text{ ou } f'(c) \text{ n'existe pas.}\]
+\end{definition}
+\begin{remarque}
+	\tcblower
+	Si $f$ est définie sur un intervalle $[a;b]$ fermé, alors les bornes de l'intervalle sont des points critiques sur lesquel la fonction peut prendre un maximum ou un minimum local.
+\end{remarque}
+
+\begin{figure}[h!]
+\centering
+\caption{Illustration de la notion de maximum et minimum local sur un fermé}
+\label{fig:combined_extrema}
+
+% --- SUBFIGURE 1: Differentiable Function ---
+\begin{subfigure}[b]{0.48\textwidth}
+    \centering
+    \begin{tikzpicture}
+        \begin{axis}[
+            axis lines=middle,
+            xlabel=$x$,
+            ylabel=$y$,
+            xtick=\empty,
+            ytick=\empty,
+            xmin=-1, xmax=6,
+            ymin=-0.5, ymax=5,
+            enlarge y limits={upper=0.1},
+            clip=false,
+            axis line style={-Stealth},
+        ]
+        % The function curve (smooth)
+        \addplot[
+            thick,
+            red!80!black,
+            smooth,
+            tension=0.8
+        ] coordinates {
+            (-0.5, 1.5)
+            (0.8, 4)    % Local Maximum
+            (2, 2.2)    % Local Minimum
+            (3.5, 3.5)  % Local Maximum
+            (4.7, 1.5)  % Local Minimum
+            (5.8, 4.5)
+        };
+
+\addplot[
+    mark=*,
+    mark size=2pt,
+    color=pointcolor,
+    only marks,
+] coordinates {(-0.5, 1.5)};
+\addplot[
+    mark=*,
+    mark size=2pt,
+    color=pointcolor,
+    only marks,
+] coordinates {(5.8, 4.5)};
+        % --- Arrow Annotations ---
+        \coordinate (max1) at (axis cs:0.8, 4);
+        \coordinate (min1) at (axis cs:2, 2.2);
+        \coordinate (max2) at (axis cs:3.5, 3.5);
+        \coordinate (min2) at (axis cs:4.7, 1.5);
+        \coordinate (max3) at (axis cs:5.8, 4.5);
+        \coordinate (min3) at (axis cs:-0.5, 1.5);
+
+        \node[align=center, font=\footnotesize] (label_min) at (axis cs:3, 1) {minimum\\ local};
+        \node[align=center, font=\footnotesize] (label_max) at (axis cs:2.5, 4.5) {maximum\\ local};
+
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max) to[bend right=10] (max1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min) to[bend right=5] (min1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max) to[bend left=10] (max2);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min) to[bend left=20] (min3);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max) to[bend left=10] (max3);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min) to[bend right=20] (min2);
+
+        \end{axis}
+    \end{tikzpicture}
+\end{subfigure}
+\hfill % Adds horizontal space between the figures
+% --- SUBFIGURE 2: Non-differentiable Function ---
+\begin{subfigure}[b]{0.48\textwidth}
+    \centering
+    \begin{tikzpicture}
+         \begin{axis}[
+            axis lines=middle,
+            xlabel=$x$,
+            ylabel=$y$,
+            xtick=\empty,
+            ytick=\empty,
+            xmin=-1, xmax=6,
+            ymin=-0.5, ymax=5,
+            enlarge y limits={upper=0.1},
+            clip=false,
+            axis line style={-Stealth},
+        ]
+        % The function curve (piecewise linear)
+        \addplot[
+            thick,
+            red!80!black
+        ] coordinates {
+            (0, 4)
+            (2, 1)   % Local Minimum (cusp)
+            (3.5, 4) % Local Maximum (cusp)
+            (5.5, 2)
+        };
+\addplot[
+    mark=*,
+    mark size=2pt,
+    color=pointcolor,
+    only marks,
+] coordinates {(0, 4)};
+\addplot[
+    mark=*,
+    mark size=2pt,
+    color=pointcolor,
+    only marks,
+] coordinates {(5.5, 2)};
+        % --- Arrow Annotations ---
+        \coordinate (min1) at (axis cs:2, 1);
+        \coordinate (max1) at (axis cs:3.5, 4);
+        \coordinate (max2) at (axis cs:0, 4);
+        \coordinate (min2) at (axis cs:5.5, 2);
+
+        \node[align=center, font=\footnotesize] (label_min1) at (axis cs:3.5, 1.2) {minimum\\ local};
+        \node[align=center, font=\footnotesize] (label_max1) at (axis cs:2, 4.5) {maximum\\ local};
+
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min1) to[bend left=10] (min1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max1) to[bend left=5] (max1);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_min1) to[bend right=10] (min2);
+        \draw[-{Stealth[length=2mm]}, gray, thick] (label_max1) to[bend right=5] (max2);
+
+        \end{axis}
+    \end{tikzpicture}
+\end{subfigure}
+
+\end{figure}
+
+\begin{exemple}
+	\tcblower
+	Déterminer les points critiques et les maximums et minimums locaux de $f(x)=3-x^2$.
+	\vspace{5cm}
+\end{exemple}
+
+\begin{exemple}
+	\tcblower
+	Déterminer les points critiques et les maximums et minimums locaux de $f(x)=\dfrac{1}{x-1}$.
+	\vspace{5cm}
+\end{exemple}
+\begin{remarque}
+	\tcblower
+	Un point critique n'est pas nécessairement un maximum ou un minimum local~!
+\end{remarque}
+
+\begin{exemple}
+	\tcblower
+	Déterminer les points critiques et les maximums et minimums locaux de $f(x)=x^3$.
+	\vspace{5cm}
+\end{exemple}
+
+\begin{exemple}
+
+\setexemplemargin[2mm]{%
+  \begin{tikzpicture}
+\begin{axis}[
+    width=5cm, % Makes the graph smaller
+    axis lines=middle,
+    % xlabel and ylabel removed as requested
+    xlabel={$x$}, ylabel={$y$},
+    xlabel style={at=(current axis.right of origin), anchor=west},
+    ylabel style={at=(current axis.above origin), anchor=south},
+    xmin=-1, xmax=5,
+    ymin=-1, ymax=5,
+    % Removed grid for a cleaner look, can be re-added if needed
+    % grid=major,
+    % grid style={dashed, gray!50},
+    axis line style={-Stealth},
+    % Also removing tick marks for a cleaner look without labels
+    xtick=\empty,
+    ytick=\empty
+]
+
+% Plot the first piece: f(x) = 2x for x < 1
+\addplot[
+    thick,
+    red!80!black,
+    domain=-0.5:1,
+    samples=2
+] {2*x};
+
+% Plot the second piece: f(x) = 0.5x + 1.5 for x >= 1
+\addplot[
+    thick,
+    red!80!black,
+    domain=1:4,
+    samples=2
+] {0.5*x + 1.5};
+
+\end{axis}
+\end{tikzpicture}
+}
+\tcblower
+
+	Déterminer les points critiques et les maximums et minimums locaux de $f(x)=\begin{cases}2x,& x<1\\
+	\dfrac{1}{2}x+\dfrac{3}{2},&x\geq 1\end{cases}$.
+	\vspace{5cm}
+\end{exemple}
+
+\begin{methode}
+	Test de la dérivée première
+	\tcblower
+	Soit $c$ un point critique de $f$ et $f$ continue en $c$ (pas nécessairement dérivable en $c$). S'il existe un voisinage $]c-a;c+a[$ de $c$ tel que
+	\begin{itemize}
+		\item $f'(x)<0$ pour tout $x\in ]c-a;c[$ et $f'(x)>0$ pour tout $x\in]c;c+a[$ alors $c$ est un minimum local.
+		\item $f'(x)>0$ pour tout $x\in ]c-a;c[$ et $f'(x)<0$ pour tout $x\in]c;c+a[$ alors $c$ est un maximum local.
+	\end{itemize}
+\end{methode}
+\begin{comment}
+\begin{exemple}
+	\tcblower
+	Déterminer à l'aide du test de la dérivée première si les points critiques de la fonction $f(x)=|x^2-1|$ sont des maximums ou minimums locaux.
+	\vspace{10cm}
+\end{exemple}
+\end{comment}
+\begin{exemple}
+	\tcblower
+	Déterminer à l'aide du test de la dérivée permière si les points critiques de la fonction $f(x)=(x-2)(x-1)^4$ sont des maximums ou minimums locaux.
+	\vspace{7cm}
+\end{exemple}
+\begin{comment}
+\begin{methode}
+	Test de la dérivée seconde
+	\tcblower
+	Soit $f$ une fonction deux fois dérivable en $c$. Soit $c$ tel que $f'(c)=0$.
+	\begin{itemize}
+		\item Si $f''(c)>0$, alors $f(c)$ est un minimum local.
+		\item Si $f''(c)<0$, alors $f(c)$ est un maximum local.
+	\end{itemize}
+\end{methode}
+\begin{exemple}
+	\tcblower
+	Utiliser le test de la dérivée seconde afin de déterminer si les points critique de $f(x)=x^3-x$ sont des extremums.
+	\vspace{10cm}
+\end{exemple}
+\end{comment}
+\begin{definition}
+	Extrema absolus
+\tcblower
+\begin{itemize}
+	\item 	Un point $(c;f(c))$ est un maximum absolu de la fonction $f$ ssi $f(c)\geq~f(x)$ pour tout $x\in D_f$.
+\item Un point $(c;f(c))$ est un minimum absolu de la fonction $f$ ssi $f(c)\leq~f(x)$ pour tout $x\in D_f$.
+\end{itemize}
+\end{definition}
+\begin{center}
+\begin{tikzpicture}
+    \begin{axis}[
+        axis lines = none,
+        clip = false,
+        xmin = 0, xmax = 7,
+        ymin = 0, ymax = 10,
+        width=10cm,
+        height=8cm
+    ]
+        % 1. Define Coordinates (ensuring x always increases)
+        \coordinate (A) at (axis cs:0.5, 3.5);
+        \coordinate (Min) at (axis cs:1.5, 1.5);
+        \coordinate (Palier) at (axis cs:3.5, 5.0);
+        \coordinate (Max) at (axis cs:5.5, 9.0);
+        \coordinate (B) at (axis cs:6, 7.5);
+
+        % 2. Draw the curve using specific angles to prevent back-looping
+        % 'in' and 'out' angles ensure the curve behaves like a function.
+        \draw[thick, black!80] (A)
+            to[out=-85, in=180] (Min)
+            to[out=0, in=190] (Palier)
+            to[out=10, in=180] (Max)
+            to[out=0, in=105] (B)
+            node[right, font=\large] {$f$};
+
+        % 3. Place markers exactly on the coordinates
+        \fill (Min) circle (2pt) node[below=8pt, font=\small\itshape] {Minimum local};
+        \fill (Palier) circle (2pt) node[above left=3pt, font=\small\itshape] {Palier};
+        \fill (Max) circle (2pt) node[above=8pt, font=\small\itshape] {Maximum local};
+
+    \end{axis}
+\end{tikzpicture}
+\end{center}
+\begin{methode}[label=met:ptcrit]
+	Étude d'une fonction
+	\tcblower
+	\begin{enumerate}
+		\item Déterminer le domaine de définition et les intersections avec les axes.
+        \item Limites aux bords et équations des asymptotes.
+        \item Tableau de monotonie et nature des points critiques
+\begin{itemize}
+		\item Déterminer le domaine sur lequel la fonction est dérivable.
+        \item Déterminer la dérivée.
+		\item Déterminer les points critiques, c'est-à-dire tous les points du domaine de définition tel que $f'(c)=0$ ou $f'(c)$ n'existe pas. {\bfseries Ne pas oublier les bornes de l'intervalle si la fonction est définie sur un intervalle fermé}.
+		\item Tester les points critiques (hors bornes) avec le test de la dérivée première;
+		\item Tester toutes les bornes incluses dans l'intervalle en évaluant la fonction et/ou en regardant le comportement de $f'$ dans un voisinage.
+		\item Déterminer si les points critiques sont des extrema locaux ou absolus.
+        \end{itemize}
+    \item Représentation graphique cohérente avec les points précédents.
+	\end{enumerate}
+\end{methode}
+
+\insertexo{hhksj}{true}{exo}
+\subsection{Optimisation}
+Vous avez déjà rencontré des problèmes d'optimisation dans votre cursus. Ces questions représentent des applications concrètes des outils d'analyse que nous avons étudiés dans les sections précédentes. Il s'agit de déterminer la valeur minimale ou maximale d'une quantité variable dans une situation donnée.
+
+La partie la plus complexe dans la résolution d'un problème d'optimisation consiste à exprimer la quantité à optimiser comme une fonction dérivable à une variable. Une fois que cela est fait, il suffit d'étudier les points critiques de la fonction pour déterminer les extrema recherchés.
+\begin{methode}
+	Résoudre un problème d'optimisation
+	\tcblower
+	\begin{enumerate}
+		\item Lire attentivement l'énoncé du problème.
+		\item Réaliser un schéma si nécessaire.
+		\item Assigner des variables aux quantités apparaissants dans le problème.
+		\item Écrire les relations entre les différentes quantités qui interviennent dans le problème. S'il y a $n$ variables, trouver au moins $n-1$ équations liant les quantités entre-elles.
+		\item Exprimer la quantité à optimiser par une fonction à une variable (il se peut qu'il faille substituer plusieurs équations dans une seule afin d'obtenir une seule expression avec une seule variable).
+		\item Étudier les points critiques (utiliser la méthode à la page \pageref{met:ptcrit}).
+		\item Interpréter la réponse trouvée et conclure.
+	\end{enumerate}
+\end{methode}
+
+\begin{exemple}
+  \tcblower
+	Quelles sont les dimensions du rectangle d'aire maximale qui puisse être inscrit dans un cercle de rayon $r$~?
+	\begin{tasks}
+		\task Réaliser un schéma.
+		\task Déterminer la fonction à optimiser.
+		\task Écrire les formules qui lient les variables.
+		\task Déterminer une fonction à une variable à optimiser.
+		\task Étudier les points critiques.
+		\task Conclure.
+	\end{tasks}
+\end{exemple}
 
 \subsection{Exercices}
 
-\insertexo{g4sjk}{true}{exo}
-\insertexo{d4c88}{true}{exo}
 \subsubsection{Le théorème des accroissement finis}
-\insertexo{d4c88}{true}{exo}
-\insertexo{aef2y}{true}{exo}
-\insertexo{n67du}{true}{exo}
+\insertexo{kafhh}{false}{exo}
+%\insertexo{d4c88}{true}{exo}
+%\insertexo{aef2y}{true}{exo}
+%\insertexo{n67du}{true}{exo}
 \insertexo{5hev4}{true}{exo}
 \insertexo{hju27}{true}{exo}
 \insertexo{zar8b}{true}{exo}
 \insertexo{x5ny2}{true}{exo}
-\insertexo{r9x4h}{true}{exo}
 \insertexo{147ae}{false}{exo}
-\insertexo{kafhh}{false}{exo}
 \insertexo{4qat4}{false}{exo}
 \insertexo{qr5rf}{false}{exo}
 \insertexo{7nemv}{false}{exo}
 \insertexo{bw6xm}{false}{exo}
 \insertexo{3m62m}{false}{exo}
-\insertexo{8bwde}{false}{exo}
+%\insertexo{8bwde}{false}{exo}
 \insertexo{pjez7}{false}{exo}
 \insertexo{c61qc}{false}{exo}
-\insertexo{n67du}{true}{exo}
+%\insertexo{n67du}{true}{exo}
 
 \subsubsection{Fonctions croissantes et décroissantes}
+\insertexo{r9x4h}{true}{exo}
 \insertexo{5pyfw}{false}{exo}
+
 
 \subsubsection{Maximum et minimum}
 \insertexo{5ab1m}{false}{exo}
+%\insertexo{a3cec}{false}{exo}
+\insertexo{q9933}{false}{exo}
+\insertexo{e3e03}{false}{exo}
+
+
 \insertexo{fxy4n}{false}{exo}
 
+\subsection{Étude de fonctions}
+\insertexo{a16e2}{false}{exo}
+\insertexo{g2505}{false}{exo}
+\insertexo{qf40a}{false}{exo}
+\insertexo{iaa5d}{false}{exo}
+\insertexo{q5c03}{false}{exo}
 
-\subsubsection{Optimisation}
-\insertexo{ddm8s}{false}{exo}
-\insertexo{sgvqw}{false}{exo}
-\insertexo{tnh2w}{false}{exo}
-\insertexo{rqexr}{false}{exo}
-\insertexo{h6e65}{false}{exo}
-\insertexo{fadzs}{false}{exo}
-\insertexo{8csxg}{false}{exo}
-\insertexo{js1pf}{false}{exo}
-\insertexo{fydq8}{false}{exo}
-\insertexo{5yxjm}{false}{exo}
-\insertexo{nsmhh}{false}{exo}
-\insertexo{74119}{false}{exo}
-\insertexo{b52kh}{false}{exo}
-\insertexo{j8hdu}{false}{exo}
-\insertexo{ju1wa}{false}{exo}
-\insertexo{p3dkt}{false}{exo}
-\insertexo{p7rny}{false}{exo}
-\insertexo{5xfze}{false}{exo}
-\insertexo{eunpj}{false}{exo}
-\insertexo{exev8}{false}{exo}
-\insertexo{f6wvk}{false}{exo}
-\insertexo{qjpyj}{false}{exo}
-\insertexo{6qaau}{false}{exo}
-\insertexo{3e21y}{false}{exo}
-\insertexo{fxwf8}{false}{exo}
+\subsection{Optimisation}
+\insertexo{df9ef}{false}{exo}
+\insertexo{jd179}{false}{exo}
+\insertexo{td5f5}{false}{exo}
+\insertexo{m610e}{false}{exo}
+\insertexo{z1e79}{false}{exo}
+\insertexo{j35b8}{false}{exo}
+\insertexo{j6242}{false}{exo}
+\insertexo{j13cc}{false}{exo}
+%\insertexo{p1dd5}{false}{exo}
+\insertexo{nc2af}{false}{exo}
+\insertexo{t9fb5}{false}{exo}
 
-\insertexo{gmcwt}{true}{exo}
-\insertexo{shcv8}{true}{exo}
-\insertexo{9q8gz}{true}{exo}
-\insertexo{xkwd5}{true}{exo}
-\insertexo{bs74m}{true}{exo}
-\insertexo{nv48n}{true}{exo}
-\insertexo{pmwx1}{true}{exo}
-\insertexo{fnj4z}{true}{exo}
-\insertexo{bhu5u}{true}{exo}
+%\subsubsection{Optimisation}
+%\insertexo{ddm8s}{false}{exo}
+%\insertexo{sgvqw}{false}{exo}
+%\insertexo{tnh2w}{false}{exo}
+%\insertexo{rqexr}{false}{exo}
+%\insertexo{h6e65}{false}{exo}
+%\insertexo{fadzs}{false}{exo}
+%\insertexo{8csxg}{false}{exo}
+%\insertexo{js1pf}{false}{exo}
+%\insertexo{fydq8}{false}{exo}
+%\insertexo{5yxjm}{false}{exo}
+%
+%\insertexo{nsmhh}{false}{exo}
+%\insertexo{74119}{false}{exo}
+%\insertexo{b52kh}{false}{exo}
+%\insertexo{j8hdu}{false}{exo}
+%\insertexo{ju1wa}{false}{exo}
+%\insertexo{p3dkt}{false}{exo}
+%\insertexo{p7rny}{false}{exo}
+%\insertexo{5xfze}{false}{exo}
+%\insertexo{eunpj}{false}{exo}
+%\insertexo{exev8}{false}{exo}
+%\insertexo{f6wvk}{false}{exo}
+%\insertexo{qjpyj}{false}{exo}
+%\insertexo{6qaau}{false}{exo}
+%\insertexo{3e21y}{false}{exo}
+%\insertexo{fxwf8}{false}{exo}
+%
+%\insertexo{gmcwt}{true}{exo}
+%\insertexo{shcv8}{true}{exo}
+%\insertexo{9q8gz}{true}{exo}
+%\insertexo{xkwd5}{true}{exo}
+%\insertexo{bs74m}{true}{exo}
+%\insertexo{nv48n}{true}{exo}
+%\insertexo{pmwx1}{true}{exo}
+%\insertexo{fnj4z}{true}{exo}
+%\insertexo{bhu5u}{true}{exo}
+%
+%\subsubsection{Concavité et points d'inflexion}
+%\insertexo{n94b7}{false}{exo}
+%\insertexo{qk7e9}{false}{exo}
+%\insertexo{tfdtr}{false}{exo}
+%\insertexo{nkasx}{false}{exo}
+%\insertexo{mdru5}{false}{exo}
+%
+%\subsubsection{Application à l'étude de fonctions}
+%\insertexo{515q8}{true}{exo}
+%\insertexo{yn5fe}{true}{exo}
+%\insertexo{3exms}{true}{exo}
+%\insertexo{w3pgx}{true}{exo}
+%\subsubsection{Applications}
+%\insertexo{fg15r}{true}{exo}
+%\insertexo{2mqwc}{true}{exo}
+%\insertexo{m4mzh}{true}{exo}
+%\insertexo{wu8y4}{true}{exo}
+%\insertexo{u7dja}{true}{exo}
+%\insertexo{e1wtj}{true}{exo}
+%\insertexo{hvq58}{true}{exo}
+%\insertexo{uvgs1}{true}{exo}
+%\insertexo{7zb7h}{true}{exo}
 
-\subsubsection{Concavité et points d'inflexion}
-\insertexo{n94b7}{false}{exo}
-\insertexo{qk7e9}{false}{exo}
-\insertexo{tfdtr}{false}{exo}
-\insertexo{nkasx}{false}{exo}
-\insertexo{mdru5}{false}{exo}
-
-\subsubsection{Application à l'étude de fonctions}
-\insertexo{515q8}{true}{exo}
-\insertexo{yn5fe}{true}{exo}
-\insertexo{3exms}{true}{exo}
-\insertexo{w3pgx}{true}{exo}
-\subsubsection{Applications}
-\insertexo{fg15r}{true}{exo}
-\insertexo{2mqwc}{true}{exo}
-\insertexo{m4mzh}{true}{exo}
-\insertexo{wu8y4}{true}{exo}
-\insertexo{u7dja}{true}{exo}
-\insertexo{e1wtj}{true}{exo}
-\insertexo{hvq58}{true}{exo}
-\insertexo{uvgs1}{true}{exo}
-\insertexo{7zb7h}{true}{exo}
-
-\section{Activités}
-\insertexo{ezscr}{true}{exo}
 
  \nocite{*}
  \vspace{-10pt}
 \defbibnote{myprenote}{Les sources suivantes ont majoritairement été utilisées pour construire ce cours. Les exercices et activités proviennent également principalement de ces ouvrages. D'autres exercices ont été adaptés ou sont inspirés de ressources partagées par des collègues ou trouvées sur internet. Leur contribution mineure les exclut de cette liste.}
  \printbibliography[prenote=myprenote,title={Sources du cours}] 
+
 
 \end{document}
