--- a/src_exos/c1e38.tex
+++ b/src_exos/c1e38.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+\qrcode{https://coopmaths.fr/alea/?uuid=36795&id=11FA9-1&n=4&d=10&s=4&s2=3&cd=1&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 Déterminer si les points $A(2; 5)$, $B(-1; 0)$ et $C\left(\dfrac{1}{2}; 7\right)$ appartiennent au graphe de $f(x) = x^3 + x + 1$.
 
