--- a/src_exos/f5f9a.tex
+++ b/src_exos/f5f9a.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+\qrcode{https://coopmaths.fr/alea/?uuid=2d459&id=1mF3-21&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 La fonction $f(x)=-3x^2 + 12x + 5$ admet-elle un maximum ou minimum ? Le calculer.
 
