--- a/src_exos/fa8ff.tex
+++ b/src_exos/fa8ff.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+\qrcode{https://coopmaths.fr/alea/?uuid=4b211&id=1mF2-11&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 Déterminer l'équation de la droite passant par les points $M(-1; 5)$ et $N(2; -1)$.
 
