--- a/src_exos/i34c4.tex
+++ b/src_exos/i34c4.tex
@@ -9,7 +9,8 @@
 \annee{2526}
 
 \contenu{
-	\tcblower
+\qrcode{https://coopmaths.fr/alea/?uuid=f2035&id=f2035&lang=fr-CH&v=eleve&es=1211001}
+\tcblower
 Déterminer la valeur de $x$ pour laquelle $f(x) = (x - 3)^2 - 4$ prend son
 minimum. Que vaut-il?
 
