--- a/src_exos/jb01e.tex
+++ b/src_exos/jb01e.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+  \qrcode{https://coopmaths.fr/alea/?uuid=5ea23&id=1mF3-3&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 Pour chacune des fonctions suivantes, donner l'intersection avec les axes, le
 sommet, la forme canonique, la forme factorisée, le
