--- a/src_exos/of723.tex
+++ b/src_exos/of723.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+\qrcode{https://coopmaths.fr/alea/?uuid=2db22&id=1mF2-12&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 Déterminer l'équation de la droite parallèle à $y = 3x - 1$ passant par $\left(\dfrac{2}{5}; 4\right)$.
 
