--- a/src_exos/pa02f.tex
+++ b/src_exos/pa02f.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+\qrcode{https://coopmaths.fr/alea/?uuid=1bb30&id=1mF2-3&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 Déterminer l'équation de la droite passant par les points $A(1; 2)$ et $B(3; 6)$.
 
