--- a/src_exos/u3450.tex
+++ b/src_exos/u3450.tex
@@ -9,6 +9,7 @@
 \annee{2526}
 
 \contenu{
+\qrcode{https://coopmaths.fr/alea/?uuid=ba520&id=1mF1-10&n=6&d=10&s=5&s2=2&s3=6&cd=1&lang=fr-CH&v=eleve&es=1211001}
 	\tcblower
 Déterminer la préimage de $10$ par la fonction $f(x) = 3x - 5$.
 
