--- a/src_exos/3m62m.tex
+++ b/src_exos/3m62m.tex
@@ -51,7 +51,7 @@ Donc $f''$ n'a qu'une seule racine : $x = 0$.
 
 \textbf{Contradiction :}
 
-Nous avons supposé que $f$ avait au moins trois racines, ce qui nous a conduit à conclure que $f'$ devait avoir au moins deux racines distinctes. Mais $f'(x) = 24x^3 - 7$ est une fonction strictement croissante (car $f''(x) = 72x^2 \geq 0$), donc elle ne peut avoir qu'une seule racine réelle.
+Nous avons supposé que $f$ avait au moins trois racines, ce qui nous a conduit à conclure que $f'$ devait avoir au moins deux racines distinctes. Mais $f'(x) = 24x^3 - 7$ est une fonction strictement croissante, donc elle ne peut avoir qu'une seule racine réelle.
 
 Ceci contredit notre hypothèse.
 
